--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "sails": { "isHook": true },
+  "sails": {
+    "isHook": true
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lodash": "^4.16.4"
+  }
 }
